# rocket-demo

./: .gitignore  App.toml  Cargo.toml  README.md  Rocket.toml  genEntity.bat
config/: log4rs.yaml
src/: main.rs
src/apis/: demo1.rs  mod.rs  other.rs  role.rs  user.rs
src/config/: mod.rs  types.rs
src/dto/: mod.rs  role.rs
src/entity/: auth_role.rs  auth_user.rs  mod.rs  prelude.rs  user.rs
src/test/: mod.rs
