[package]
name = "rocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
figment = { version = "0.10.14", features = ["env", "toml", "json"] }
log = { version = "0.4.20", features = ["std", "serde"] }
log4rs = "1.3.0"
rocket = { version = "0.5.0", features = ["json"] }
sea-orm = { version = "0.12.12", features = [
    "sqlx-mysql",
    "macros",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
utoipa = { version = "4.2.0", features = ["chrono", "rocket_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["rocket"] }
tokio = { version = "1", features = ["full"] }
